--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=true" />
-    <title>Veil</title>
+    <title>Lithium</title>
     <link rel="shortcut icon" href="./icons/veil_nobg.png" type="image/x-icon">
     <meta name="googlebot" content="index, follow, snippet" />
     <meta name="keywords" content="unblocking, school proxy, unblocked games, unblocked, starfire,unblocking, school proxy, unblocked games, unblocker, school internet restrictions, proxy bypass, gaming at school, website unblocking, circumvent filters, unblock websites, restricted internet access, proxy servers for school, access blocked content, proxy avoidance ">
@@ -13,8 +13,6 @@
     <meta name="robots" content="index, follow">
 
     <link rel="stylesheet" href="./styles/index.css">
-    <!-- Hoo boy particlesjs --> 
-    <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
