--- a/static/apps.html
+++ b/static/apps.html
@@ -4,230 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apps - Lithium</title>
+    <link rel="stylesheet" href="./styles/index.css">
+    <link id="theme-css" rel="stylesheet" href="./styles/theme-default.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-        :root {
-            --primary: #3498db;
-            --primary-dark: #2980b9;
-            --accent: #4fc3f7;
-            --dark: #1a1a1a;
-            --darker: #141414;
-            --light: #ffffff;
-            --gray: #808080;
-            --glow: rgba(52, 152, 219, 0.3);
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Arial', sans-serif;
-        }
-
-        body {
-            background: var(--dark);
-            color: var(--light);
-            min-height: 100vh;
-            position: relative;
-            overflow-x: hidden;
-        }
-
-        body::before {
-            content: '';
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: 
-                radial-gradient(circle at 20% 30%, var(--glow) 0%, transparent 50%),
-                radial-gradient(circle at 80% 70%, var(--glow) 0%, transparent 50%);
-            opacity: 0.4;
-            pointer-events: none;
-            z-index: 0;
-        }
-
-        .container {
-            max-width: 1400px;
-            margin: 0 auto;
-            padding: 2rem;
-            position: relative;
-            z-index: 1;
-        }
-
-        .category {
-            margin-bottom: 3rem;
-            backdrop-filter: blur(10px);
-            background: rgba(26, 26, 26, 0.7);
-            padding: 2rem;
-            border-radius: 15px;
-            border: 1px solid rgba(52, 152, 219, 0.1);
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-        }
-
-        .category-title {
-            font-size: 1.5rem;
-            margin-bottom: 1.5rem;
-            color: var(--accent);
-            border-bottom: 2px solid var(--primary);
-            padding-bottom: 0.5rem;
-            text-shadow: 0 0 10px var(--glow);
-        }
-
-        .apps-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-            gap: 1rem;
-            margin-bottom: 2rem;
-        }
-
-        .app-button {
-            background: rgba(255, 255, 255, 0.05);
-            border: 1px solid rgba(52, 152, 219, 0.2);
-            border-radius: 12px;
-            padding: 1rem;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            position: relative;
-            overflow: hidden;
-        }
-
-        .app-button::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(
-                90deg,
-                transparent,
-                rgba(52, 152, 219, 0.1),
-                transparent
-            );
-            transition: 0.5s;
-        }
-
-        .app-button:hover::before {
-            left: 100%;
-        }
-
-        .app-button:hover {
-            transform: translateY(-5px);
-            background: rgba(52, 152, 219, 0.1);
-            border-color: var(--primary);
-            box-shadow: 0 5px 15px rgba(52, 152, 219, 0.2);
-        }
-
-        .app-button img {
-            width: 48px;
-            height: 48px;
-            border-radius: 8px;
-            margin-bottom: 0.5rem;
-            transition: transform 0.3s ease;
-        }
-
-        .app-button:hover img {
-            transform: scale(1.1);
-        }
-
-        .app-name {
-            font-size: 0.8rem;
-            color: var(--light);
-            text-align: center;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
-            width: 100%;
-        }
-
-        .search-bar {
-            margin-bottom: 2rem;
-            width: 100%;
-            max-width: 600px;
-            margin-left: auto;
-            margin-right: auto;
-            position: relative;
-        }
-
-        .search-bar input {
-            width: 100%;
-            padding: 1rem 1.5rem;
-            border-radius: 25px;
-            border: 1px solid var(--primary);
-            background: rgba(26, 26, 26, 0.8);
-            color: var(--light);
-            font-size: 1rem;
-            transition: all 0.3s ease;
-            backdrop-filter: blur(5px);
-        }
-
-        .search-bar input:focus {
-            outline: none;
-            border-color: var(--accent);
-            box-shadow: 0 0 15px var(--glow);
-        }
-
-        .search-bar::before {
-            content: '\f002';
-            font-family: 'Font Awesome 6 Free';
-            font-weight: 900;
-            position: absolute;
-            right: 1.5rem;
-            top: 50%;
-            transform: translateY(-50%);
-            color: var(--primary);
-            opacity: 0.7;
-        }
-
-        @media (max-width: 768px) {
-            .apps-grid {
-                grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
-            }
-            
-            .app-button img {
-                width: 40px;
-                height: 40px;
-            }
-
-            .category {
-                padding: 1rem;
-            }
-        }
-
-        /* Ambient background particles */
-        .particle {
-            position: fixed;
-            background: var(--primary);
-            border-radius: 50%;
-            pointer-events: none;
-            opacity: 0.3;
-            animation: float 15s infinite linear;
-        }
-
-        @keyframes float {
-            0% {
-                transform: translateY(0) translateX(0);
-            }
-            50% {
-                transform: translateY(-100px) translateX(100px);
-            }
-            100% {
-                transform: translateY(0) translateX(0);
-            }
-        }
+     
     </style>
 </head>
-<body>
+<body class="theme-default">
     <!-- Add ambient particles -->
     <div class="particle" style="width: 3px; height: 3px; top: 20%; left: 20%;"></div>
-    <div class="particle" style="width: 4px; height: 4px; top: 60%; left: 70%;"></div>
-    <div class="particle" style="width: 2px; height: 2px; top: 40%; left: 40%;"></div>
-    <div class="particle" style="width: 5px; height: 5px; top: 80%; left: 10%;"></div>
-    <div class="particle" style="width: 3px; height: 3px; top: 10%; left: 90%;"></div>
+    <div class="particle" style="width: 2px; height: 2px; top: 30%; left: 60%;"></div>
+    <div class="particle" style="width: 4px; height: 4px; top: 70%; left: 90%;"></div>
+    <div class="particle" style="width: 2.5px; height: 2.5px; top: 10%; left: 40%;"></div>
+    <div class="particle" style="width: 3.5px; height: 3.5px; top: 50%; left: 30%;"></div>
+    <div class="particle" style="width: 1.5px; height: 1.5px; top: 80%; left: 10%;"></div>
+    <div class="particle" style="width: 2px; height: 2px; top: 40%; left: 70%;"></div>
+    <div class="particle" style="width: 3px; height: 3px; top: 60%; left: 50%;"></div>
+
+    <div class="time-bar" id="timeBar"></div>
+
+    <nav>
+        <ul class="nav-links">
+            <li><a href="/">Home</a></li>
+            <li><a href="apps.html">Apps</a></li>
+            <li><a href="settings.html">Settings</a></li>
+        </ul>
+    </nav>
+
+  
 
     <div class="container">
         <div class="search-bar">
@@ -235,7 +40,6 @@
         </div>
 
         <div class="category" id="productivity">
-            <h2 class="category-title">Productivity & Work</h2>
             <div class="apps-grid">
                 <button class="app-button" onclick="openURL('https://docs.google.com')">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQXVAEuwhxH8OvQemf7mrQ_wzCDL6DodQEDuw&s" alt="Google Docs"/>
@@ -261,7 +65,6 @@
         </div>
 
         <div class="category" id="social">
-            <h2 class="category-title">Social & Communication</h2>
             <div class="apps-grid">
                 <button class="app-button" onclick="openURL('https://discord.com')">
                     <img src="/assets/discord.webp" alt="Discord"/>
@@ -286,8 +89,6 @@
             </div>
         </div>
 
-        <div class="category" id="entertainment">
-            <h2 class="category-title">Entertainment & Streaming</h2>
             <div class="apps-grid">
                 <button class="app-button" onclick="openURL('https://netflix.com')">
                     <img src="/assets/Symbol.png" alt="Netflix"/>
@@ -312,8 +113,6 @@
             </div>
         </div>
 
-        <div class="category" id="shopping">
-            <h2 class="category-title">Shopping & Finance</h2>
             <div class="apps-grid">
                 <button class="app-button" onclick="openURL('https://amazon.com/')">
                     <img src="/assets/amazon.webp" alt="Amazon"/>
@@ -338,8 +137,6 @@
             </div>
         </div>
 
-        <div class="category" id="creative">
-            <h2 class="category-title">Creative & Design</h2>
             <div class="apps-grid">
                 <button class="app-button" onclick="openURL('https://creativecloud.adobe.com')">
                     <img src="/assets/adobe.png" alt="Adobe CC"/>
@@ -361,7 +158,6 @@
         </div>
 
         <div class="category" id="learning">
-            <h2 class="category-title">Learning & Development</h2>
             <div class="apps-grid">
                 <button class="app-button" onclick="openURL('https://udemy.com')">
                     <img src="/assets/udemy.webp" alt="Udemy"/>
@@ -384,11 +180,47 @@
     </div>
 
     <script>
+        // Time Bar
+        function updateTimeBar() {
+            const now = new Date();
+            let hours = now.getHours();
+            const minutes = now.getMinutes().toString().padStart(2, '0');
+            const seconds = now.getSeconds().toString().padStart(2, '0');
+            const ampm = hours >= 12 ? 'PM' : 'AM';
+            hours = hours % 12;
+            hours = hours ? hours : 12;
+            hours = hours.toString().padStart(2, '0');
+            document.getElementById('timeBar').textContent = `${hours}:${minutes}:${seconds} ${ampm}`;
+        }
+
+        setInterval(updateTimeBar, 1000);
+        updateTimeBar(); // Initial update
+
+        // Theme System
+        function toggleThemeOptions() {
+            const options = document.getElementById('themeOptions');
+            options.style.display = options.style.display === 'block' ? 'none' : 'block';
+        }
+
+        function setTheme(theme) {
+            const themeLink = document.getElementById('theme-css');
+            themeLink.href = `./styles/theme-${theme}.css`;
+            localStorage.setItem('theme', theme);
+            toggleThemeOptions();
+        }
+
+        // Load saved theme
+        const savedTheme = localStorage.getItem('theme') || 'default';
+        const themeLink = document.getElementById('theme-css');
+        themeLink.href = `./styles/theme-${savedTheme}.css`;
+
+        // URL Handling
         function openURL(url) {
             localStorage.setItem("url", url);
             window.location.href = "go.html";
         }
 
+        // Search functionality
         document.getElementById('searchApps').addEventListener('input', function(e) {
             const searchTerm = e.target.value.toLowerCase();
             const buttons = document.querySelectorAll('.app-button');
@@ -401,6 +233,14 @@
                     button.style.display = 'none';
                 }
             });
+        });
+
+        // Close theme options when clicking outside
+        document.addEventListener('click', function(event) {
+            const themeSelector = document.querySelector('.theme-selector');
+            if (!themeSelector.contains(event.target)) {
+                document.getElementById('themeOptions').style.display = 'none';
+            }
         });
     </script>
 </body>
